test/spec_vectors/simd_int_to_int_extend/fail/module_17.wat
(module (func $i32x4.extend_high_i16x8_s-arg-empty (result v128) (i32x4.extend_high_i16x8_s)))